@@ -1,0 +1,42 @@
+<com:TContent ID="body">
+
+<h1>THtmlArea Samples</h1>
+
+<table class="sampletable">
+
+<tr><td class="samplenote">
+THtmlArea with default settings:
+</td><td class="sampleaction">
+<com:THtmlArea ID="HtmlArea1" />
+<com:TButton Text="Submit" OnClick="button1Clicked" />
+<br/>
+<com:TLiteral Encode="true" ID="Result1" />
+</td></tr>
+
+<tr><td class="samplenote">
+THtmlArea with customized size and table toolbar:
+</td><td class="sampleaction">
+<com:THtmlArea ID="HtmlArea2" Width="500px" Height="250px">
+  <prop:Options>
+    plugins : "table"
+  	theme_advanced_buttons3 : "tablecontrols"
+  </prop:Options>
+</com:THtmlArea>
+<com:TButton Text="Submit" OnClick="button2Clicked" />
+<br/>
+<com:TLiteral Encode="true" ID="Result2" />
+</td></tr>
+
+<tr><td class="samplenote">
+THtmlArea with visual editting disabled:
+</td><td class="sampleaction">
+<com:THtmlArea ID="HtmlArea3" EnableVisualEdit="false" />
+<br/>
+<com:TButton Text="Submit" OnClick="button3Clicked" />
+<br/>
+<com:TLiteral Encode="true" ID="Result3" />
+</td></tr>
+
+</table>
+
+</com:TContent>
