@@ -12,6 +12,7 @@ BUG: THttpSession fails when user storage module is used (Qiang)
 CHG: TTextHighlighter.EnableCopyCode defaults to false (Qiang)
 CHG: Reorganized quickstart tutorial demo, added new sections (Qiang)
 CHG: Reorganized folders under framework (Qiang)
+CHG: Modified THtmlArea default toolbar and size. (Qiang)
 ENH: Ticket#92 - Support for user exception message file (Qiang)
 ENH: Ticket#106 - Support for validation on THiddenField (Qiang)
 ENH: TDataFieldAccessor can access public class variables (Qiang)
